--- a/ToggleSwitchDemo/MainWindow.xaml
+++ b/ToggleSwitchDemo/MainWindow.xaml
@@ -34,7 +34,8 @@
             ContentChecked="On"
             Foreground="Black"
             FontSize="25"
-            Height="60" 
+            Height="60"
+            Radius="20"
             ControlWidth="200"
             ToggleWidth="120"
             />
