--- a/ToggleSwitchLibrary/Themes/Generic.xaml
+++ b/ToggleSwitchLibrary/Themes/Generic.xaml
@@ -52,8 +52,8 @@
                                    Foreground="{TemplateBinding Foreground}"
                                    FontSize="{TemplateBinding FontSize}"
                                    VerticalAlignment="Center"
-                                   Padding="5"
-                                   
+                                   HorizontalAlignment="Left"
+                                   Width="{Binding Path=ContentBlockWidth, RelativeSource={RelativeSource AncestorType={x:Type local:ToggleSwitch}}}"
                                    Text="{TemplateBinding ContentUnchecked}">
                         </TextBlock>
                     </Grid>
